Fixed the posts' layout jumping in loading.
screen width >= 1200px and the panel is visible.

--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -115,7 +115,7 @@
 /*
   The following resposive design aim to make #post-extend-wrap margin-right same as pannel's width
 */
-@media all and (min-width: 1201px) {
+@media all and (min-width: 1200px) {
   #post-extend-wrap {
     margin-right: 25%;
   }
